custom expansion panel completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
-<c2c-card>
+<!-- card -->
+<div class="sub-heading-1 text-center p-4">card</div>
+
+<c2c-card >
 
     <img c2c-card-avatar src="https://images.unsplash.com/photo-1552519507-da3b142c6e3d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2Fyc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80">
   
@@ -6,3 +9,15 @@
     <c2c-card-content>This is my card desc</c2c-card-content>
   
   </c2c-card>
+
+<!-- expansion-panel -->
+<div class="sub-heading-1 text-center p-4 ">Expansion panel</div>
+
+  <c2c-expansion-panel >
+    <expansion-panel-title class="sub-heading-2" >header</expansion-panel-title>
+    <div class="sub-heading-2">Body</div>
+    <expansion-panel-footer>
+      <button c2c-button class=" sub-heading-2 primaryBtn-sm">click</button>
+    </expansion-panel-footer>
+  </c2c-expansion-panel>
+  
