component code is verified by balaji and changes need to be implemented are listed with reference links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,12 +12,13 @@
 
 <!-- expansion-panel -->
 <div class="sub-heading-1 text-center p-4 ">Expansion panel</div>
-
   <c2c-expansion-panel >
     <expansion-panel-title class="sub-heading-2" >header</expansion-panel-title>
     <div class="sub-heading-2">Body</div>
     <expansion-panel-footer>
-      <button c2c-button class=" sub-heading-2 primaryBtn-sm">click</button>
+      <button style="float: right;" c2c-button class=" sub-heading-2 primaryBtn-sm">click</button>
     </expansion-panel-footer>
   </c2c-expansion-panel>
+
+  
   
