button component is completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,7 @@
     <c2c-card-content>This is my card desc</c2c-card-content>
   
   </c2c-card>
+
+  <ngt-button (click)="buttonClicked()">
+    click on me
+  </ngt-button>
