checkbox component is completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,3 +10,6 @@
   <ngt-button (click)="buttonClicked()">
     click on me
   </ngt-button>
+  <ngt-checkbox (click)="checkboxCLicked()">
+    check on me
+  </ngt-checkbox>
