--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,78 @@
 <c2c-card>
 
-    <img c2c-card-avatar src="https://images.unsplash.com/photo-1552519507-da3b142c6e3d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2Fyc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80">
-  
-    <c2c-card-title>Title 123</c2c-card-title>
-    <c2c-card-content>This is my card desc</c2c-card-content>
-  
-  </c2c-card>
+  <img c2c-card-avatar
+    src="https://images.unsplash.com/photo-1552519507-da3b142c6e3d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2Fyc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80">
+
+  <c2c-card-title>Title 123</c2c-card-title>
+  <c2c-card-content>This is my card desc</c2c-card-content>
+
+</c2c-card>
+
+<!-- <app-tree></app-tree> -->
+<!-- 
+<c2c-tree>
+  <c2c-nested-tree-node>
+    > Fruit
+    <c2c-tree-node style="margin-left: 50px;">Apple</c2c-tree-node>
+    <c2c-tree-node style="margin-left: 50px;">Banana</c2c-tree-node>
+    <c2c-tree-node style="margin-left: 50px;">Fruit Loops</c2c-tree-node>
+  </c2c-nested-tree-node>
+
+  <c2c-nested-tree-node>
+    > Vegetables
+    <br>
+    <c2c-nested-tree-node style="margin-left: 50px;">
+      > Green
+      <br>
+      <c2c-tree-node style="margin-left: 100px;">Brocolli</c2c-tree-node>
+      <c2c-tree-node style="margin-left: 100px;">Brussels Sprouts</c2c-tree-node>
+    </c2c-nested-tree-node>
+    <c2c-nested-tree-node style="margin-left: 50px;">
+      > Orange
+
+      <c2c-tree-node style="margin-left: 100px;">Pumpkins</c2c-tree-node>
+      <c2c-tree-node style="margin-left: 100px;">Carrots</c2c-tree-node>
+    </c2c-nested-tree-node>
+  </c2c-nested-tree-node>
+</c2c-tree> -->
+
+
+<c2c-tree>
+  <c2c-nested-tree-node>
+    Fruit
+    <c2c-tree-node>Apple</c2c-tree-node>
+    <c2c-tree-node>Banana</c2c-tree-node>
+    <c2c-tree-node>Mango</c2c-tree-node>
+  </c2c-nested-tree-node>
+  <c2c-nested-tree-node>
+    Vegetables
+    <c2c-tree-node>
+      <c2c-nested-tree-node>
+        Green
+        <c2c-tree-node>Brocolli</c2c-tree-node>
+      </c2c-nested-tree-node>
+    </c2c-tree-node>
+  </c2c-nested-tree-node>
+</c2c-tree>
+
+
+<!-- <c2c-tree>
+  <c2c-nested-tree-node>
+    Fruit
+    <c2c-tree-node>Apple</c2c-tree-node>
+    <c2c-tree-node>Banana</c2c-tree-node>
+    <c2c-tree-node>Mango</c2c-tree-node>
+  </c2c-nested-tree-node>
+  <c2c-nested-tree-node>
+    Vegetables
+    <c2c-tree-node></c2c-tree-node>
+    <c2c-nested-tree-node>
+      Green
+      <c2c-tree-node>Brocolli</c2c-tree-node>
+    </c2c-nested-tree-node>
+    <c2c-nested-tree-node>
+      Orange
+      <c2c-tree-node>Carrots</c2c-tree-node>
+    </c2c-nested-tree-node>
+  </c2c-nested-tree-node>
+</c2c-tree> -->
