--- a/src/app/ngt-components/tree/nested.tree.html
+++ b/src/app/ngt-components/tree/nested.tree.html
@@ -1,5 +1,5 @@
 <div>
-    <img src="../../../assets/right-arrow-angle.svg" [class]="isExpanded ? 'rotate-down': 'rotate-right'"  style="height: 10px;display: inline;" (click)="toggleArrow()" alt="no-img">
+    <img src="../../../assets/right-arrow-angle.svg" [class]="isExpanded ? 'rotate-down': 'rotate-right'"  style="height: 10px;display: inline;" (click)="isExpanded = ! isExpanded" alt="no-img">
     <!-- For nested-tree-nodes --><ng-content></ng-content>
     <div *ngIf="isExpanded">
         <ng-content select='c2c-tree-node'></ng-content>
