--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,4 +7,8 @@
   <c2c-card-content>This is my card desc</c2c-card-content>
 
 </c2c-card>
-<ngt-dropdown></ngt-dropdown>
+<ngt-dropdown>
+  <div *ngFor="let el of dropDownarr" (click)="dropdownclick(el)">
+    {{el}}
+  </div>
+</ngt-dropdown>
