dialog box module location changed from root src to ngt-components folder

--- a/src/app/ngt-components/card/dialogbox/dialogbox.component.html
+++ b/src/app/ngt-components/card/dialogbox/dialogbox.component.html
@@ -2,7 +2,8 @@
 
 <div class="fixed w-1/2  inset-y-1/3 inset-x-1/4 md:w-1/3 md:top-1/3 md:left-1/3 rounded-sm">
     <div class=" bg-black-200 opacity-40 fixed inset-0 rounded-sm shadow-2xl"></div>
-    <div class="relative max-h-full  opacity-100 bg-white  p-5 rounded-sm border shadow-2xl flex flex-col md:text-base text-sm " id='animation'>
+    <div class="relative max-h-full  opacity-100 bg-white  p-5 rounded-sm border shadow-2xl flex flex-col md:text-base text-sm "
+        id='animation'>
         <div>
             <ng-content select="c2c-dialogbox-title"></ng-content>
         </div>
