--- a/src/app/ngt-components/card/dialogbox/dialogbox.component.html
+++ b/src/app/ngt-components/card/dialogbox/dialogbox.component.html
@@ -11,7 +11,7 @@
             <ng-content select="c2c-dialogbox-content"></ng-content>
         </div>
         <footer class="py-1 pt-4 flex flex-col">
-            <ng-content select="c2c-dialogbox-actions" (click)="goBack()"></ng-content>
+            <ng-content select="c2c-dialogbox-actions" ></ng-content>
         </footer>
     </div>
 </div>
