Tree Changed from c2c-tree-node to ngt-tree-node

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,29 +1,29 @@
-<c2c-card>
+<!-- <ngt-card>
 
-  <img c2c-card-avatar
+  <img ngt-card-avatar
     src="https://images.unsplash.com/photo-1552519507-da3b142c6e3d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2Fyc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80">
 
-  <c2c-card-title>Title 123</c2c-card-title>
-  <c2c-card-content>This is my card desc</c2c-card-content>
+  <ngt-card-title>Title 123</ngt-card-title>
+  <ngt-card-content>This is my card desc</ngt-card-content>
 
-</c2c-card>
+</ngt-card>
+ -->
 
-
-<c2c-tree>
-  <c2c-nested-tree-node>
+<ngt-tree>
+  <ngt-nested-tree-node>
     Fruit
-    <c2c-tree-node>Apple</c2c-tree-node>
-    <c2c-tree-node>Banana</c2c-tree-node>
-    <c2c-tree-node>Mango</c2c-tree-node>
-  </c2c-nested-tree-node>
-  <c2c-nested-tree-node>
+    <ngt-tree-node>Apple</ngt-tree-node>
+    <ngt-tree-node>Banana</ngt-tree-node>
+    <ngt-tree-node>Mango</ngt-tree-node>
+  </ngt-nested-tree-node>
+  <ngt-nested-tree-node>
     Vegetables
-    <c2c-tree-node>
-      <c2c-nested-tree-node>
+    <ngt-tree-node>
+      <ngt-nested-tree-node>
         Green
-        <c2c-tree-node>Brocolli</c2c-tree-node>
-      </c2c-nested-tree-node>
-    </c2c-tree-node>
-  </c2c-nested-tree-node>
-</c2c-tree>
+        <ngt-tree-node>Brocolli</ngt-tree-node>
+      </ngt-nested-tree-node>
+    </ngt-tree-node>
+  </ngt-nested-tree-node>
+</ngt-tree>
 
