basic version of tabs component is ready

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,13 @@
-<c2c-card>
-
-    <img c2c-card-avatar src="https://images.unsplash.com/photo-1552519507-da3b142c6e3d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8Mnx8Y2Fyc3xlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&w=1000&q=80">
-  
-    <c2c-card-title>Title 123</c2c-card-title>
-    <c2c-card-content>This is my card desc</c2c-card-content>
-  
-  </c2c-card>
+<div class="w-3/6 m-auto">
+<tabs>
+  <tab tabTitle="Challenges">
+    Content of Challenges
+  </tab>
+  <tab tabTitle="Cocos">
+    Content of Cocos
+  </tab>
+  <tab tabTitle="Friends">
+    Content of Friends
+  </tab>
+</tabs>
+</div>
