tab title style is changed on active

--- a/src/app/ngt-components/tabs/tabs.component.html
+++ b/src/app/ngt-components/tabs/tabs.component.html
@@ -1,5 +1,5 @@
 <ul class="flex mt-10 ml-10">
-    <li class="mr-3 font-semi-bold text-lg cursor-pointer tracking-wide font-sans" *ngFor="let tab of tabs" (click)="selectTab(tab)" [class.active-tab]="tab.active">
+    <li class="mr-3 font-semi-bold text-lg cursor-pointer tracking-wide font-sans tab-item" *ngFor="let tab of tabs" (click)="selectTab(tab)" [class.active-tab]="tab.active">
         {{tab.tabTitle}}
     </li>
 </ul>
