--- a/src/app/ngt-components/tabs/tabs.component.scss
+++ b/src/app/ngt-components/tabs/tabs.component.scss
@@ -1,10 +1,4 @@
-.tab-button
-{
-    @apply mr-2;
-    @apply font-semibold;
-    @apply tracking-wide;
-    @apply text-lg;
-}
+
 .active-tab
 {
    @apply text-blue;
@@ -14,7 +8,8 @@
    border-bottom-left-radius:3px;
    border-bottom-right-radius:3px;
    font-weight: bold;
-   letter-spacing: 1.2;
+   //letter-spacing: 1.2px;
+   
 }
 
 
