tab animations completed

--- a/src/app/ngt-components/tabs/tabs.component.scss
+++ b/src/app/ngt-components/tabs/tabs.component.scss
@@ -4,12 +4,27 @@
    @apply text-blue;
    @apply border-blue;
    @apply border-b;
+   display: inline-block;
+   margin: 0 0.5rem;
+ 
+   animation: pulse; /* referring directly to the animation's @keyframe declaration */
+   animation-duration: 2s; /* don't forget to set a duration! */
    border-bottom-width:3.5px;
    border-bottom-left-radius:3px;
    border-bottom-right-radius:3px;
    font-weight: bold;
    //letter-spacing: 1.2px;
    
-}
+}.animate__animated.animate__bounce {
+   --animate-duration: 2s;
+ }
+ 
+ /* This changes all the animations globally */
+ :root {
+   --animate-duration: 800ms;
+   --animate-delay: 0.9s;
+ }
+
+
 
 
