animations for checkbox and input focus for input

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,10 @@
     <c2c-card-content>This is my card desc</c2c-card-content>
   
   </c2c-card> -->
-
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
   <ngt-button (click)="buttonClicked()">
     click on me
   </ngt-button>
