changing color of button and input focus

--- a/src/app/ngt-components/button/button.component.scss
+++ b/src/app/ngt-components/button/button.component.scss
@@ -1,7 +1,9 @@
 
   
   /*Create ripple effec*/
-  
+  .btn  {
+    background-color: lightblue;
+  }
   .ripple {
     position: relative;
     overflow: hidden;
