--- a/src/app/ngt-components/input/input.component.scss
+++ b/src/app/ngt-components/input/input.component.scss
@@ -1,5 +1,6 @@
 input:focus{
     border: 5px solid;
-    border-image: linear-gradient(to right, violet, lightblue);
+    border-image: linear-gradient(to right,lightblue, lightblue);
     border-image-slice: 1;
+    opacity: 50;
     }
