changing upward arrow in expnsion panel

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
 <!-- card -->
+<link
+rel="stylesheet"
+href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+/>
+
 <div class="sub-heading-1 text-center p-4">card</div>
 
 <c2c-card >
