--- a/src/app/ngt-components/expansion-panel/expansion-panel.component.html
+++ b/src/app/ngt-components/expansion-panel/expansion-panel.component.html
@@ -8,10 +8,10 @@
     </div>
 
  <div  [@animationShowHide]="sStatus">
-    <div class="py-4 " [hidden]="isHidden">
+    <div class="py-4 " >
         <ng-content ></ng-content>
         </div>
-        <div [hidden]="isHidden"  class="expansioncontent">
+        <div   class="expansioncontent">
             <ng-content select="expansion-panel-footer"></ng-content>
         </div>
  </div>
