animations and styling changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,20 @@
+
+  <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <div class="w-3/6 m-auto">
 <tabs>
   <tab tabTitle="Challenges">
     Content of Challenges
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus exercitationem vero, id autem fugit assumenda a molestiae numquam at, quisquam cumque. Labore eligendi perspiciatis quia incidunt quaerat ut ducimus?
   </tab>
   <tab tabTitle="Cocos">
     Content of Cocos
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus exercitationem vero, id autem fugit assumenda a molestiae numquam at, quisquam cumque. Labore eligendi perspiciatis quia incidunt quaerat ut ducimus?
   </tab>
   <tab tabTitle="Friends">
     Content of Friends
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus exercitationem vero, id autem fugit assumenda a molestiae numquam at, quisquam cumque. Labore eligendi perspiciatis quia incidunt quaerat ut ducimus?
   </tab>
 </tabs>
 </div>
