--- a/src/app/ngt-components/tab/tab.component.html
+++ b/src/app/ngt-components/tab/tab.component.html
@@ -1,3 +1,3 @@
-<div class="animate__animated animate__fadeInRight" [hidden]="!active">
+<div class="animate__animated animate__fadeIn px-11 py-12" [hidden]="!active">
     <ng-content></ng-content>
 </div>
