--- a/src/app/ngt-components/dropdown/dropdown.component.html
+++ b/src/app/ngt-components/dropdown/dropdown.component.html
@@ -1,6 +1,6 @@
 <div class="relative pl-64 py-16 inline-block text-left ">
     <div (click)="dropdownclick()">
-      <button type="button"  class="inline-flex justify-center w-full bg-blue-600 bg-opacity-100 rounded-lg shadow-sm px-4 py-2  bg-white text-sm font-medium text-white hover:bg-blue focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
+      <button type="button"  class="inline-flex justify-center w-full bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2  text-sm font-medium text-white  focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
         Python Programming
         <svg class="-mr-1 ml-10 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
@@ -8,7 +8,7 @@
       </button>
     </div>
     <div *ngIf="dropornot"  >
-      <div class=" origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 ">
+      <div class=" origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white  focus:outline-none">
       <div *ngFor="let values of dropDownarr" class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
         <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">{{values}}</a>
       </div>
@@ -17,14 +17,14 @@
   </div>
   <div class="relative pl-64 py-16 inline-block text-left ">
     <div (click)="New()">
-      <button type="button"  class="inline-flex justify-center w-full bg-gray-100 bg-opacity-100 rounded-lg shadow-sm px-4 py-2  bg-white text-sm font-medium text-gray-700 hover:bg-blue focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
+      <button type="button"  class="inline-flex justify-center w-full bg-gray-100 bg-opacity-100 rounded-lg shadow-sm px-4 py-2  bg-white text-sm font-medium text-gray-700 focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
         New
         <svg class="-mr-1 ml-10 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
         </svg>
       </button>
     </div>
-    <div *ngIf="newdropornot" class=" origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 ">
+    <div *ngIf="newdropornot" class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ">
       <div *ngFor="let values of dropDownarr" class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
         <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">{{values}}</a>
       </div>
@@ -35,14 +35,15 @@
 
   <div class="relative pl-64 py-16 inline-block text-left ">
     <div (click)="Mahismathi()">
-      <button type="button"  class="inline-flex justify-center w-full bg-green-500 bg-opacity-100 rounded-lg shadow-sm px-4 py-2  bg-white text-sm font-medium text-white hover:bg-blue focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
+      <button type="button"  class="inline-flex justify-center w-full bg-green bg-opacity-100 rounded-lg shadow-sm px-4 py-2 text-sm font-medium text-white focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
        Mahismathi
         <svg class="-mr-1 ml-10 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
         </svg>
       </button>
     </div>
-    <div *ngIf="mahismathidropornot" class=" origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 ">
+    <!-- ring-1 ring-black ring-opacity-5  -->
+    <div *ngIf="mahismathidropornot" class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ">
       <div *ngFor="let values of dropDownarr" class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
         <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">{{values}}</a>
       </div>
@@ -60,7 +61,7 @@
         </svg>
       </button>
     </div>
-    <div *ngIf="languagesdropornot" class=" origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 ">
+    <div *ngIf="languagesdropornot" class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ">
       <div *ngFor="let values of dropDownarr" class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
         <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">{{values}}</a>
       </div>
@@ -72,8 +73,8 @@
 
   <div class="relative pl-32 py-32  inline-block w-3/6 ">
     <div  class="flex flex-wrap content-center">
-      <button type="button"  class="flex flex-wrap content-center  justify-left w-full h-20 bg-blue-600 bg-opacity-100 rounded-lg shadow-sm px-4 py-2  bg-white text-md font-bold text-white hover:bg-blue focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
-        <div class="font-bold text-2xl text-blue-600 rounded-full bg-white flex items-center justify-center font-mono w-10 h-10 px-4 py-4">P</div>
+      <button type="button"  class="flex flex-wrap content-center  justify-left w-full h-20 bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2 text-md font-bold text-white hover:bg-blue focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
+        <div class="font-bold text-2xl text-blue rounded-full bg-white flex items-center justify-center font-mono w-10 h-10 px-4 py-4">P</div>
        <div class="flex flex-col ">
         <span class="px-4">Python Programming</span>
         <span class="text-xs font-medium text-gray inline-flex px-4">1000+ Posts</span>
@@ -84,7 +85,7 @@
         </svg> -->
       </button>
     </div>
-    <div *ngIf="postsdropornot" class=" origin-top-right absolute right-0  w-32 -mt-5 mr-4 rounded-md shadow-lg bg-white ring-1 ring-black ring-opacity-5 ">
+    <div *ngIf="postsdropornot" class="focus:outline-none origin-top-right absolute right-0  w-32 -mt-5 mr-4 rounded-md shadow-lg bg-white">
       <img class="origin-top-right absolute right-0  -mt-2 mr-2" src="../../../assets/Component 983 – 1.svg">
       <div *ngFor="let values of dropDownarratPost" class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
         <a href="#" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 hover:text-gray-900" role="menuitem">{{values}}</a>
@@ -100,16 +101,16 @@
 <br>
   <div class="relative pl-64 py-16 inline-block text-left ">
     <div (click)="Profile()">
-      <button type="button"  class="flex flex-row px-4 py-2 bg-white text-sm font-medium text-white hover:bg-blue focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
+      <button type="button"  class="flex flex-row px-4 py-2 bg-white text-sm font-medium text-white focus:outline-none " id="options-menu" aria-haspopup="true" aria-expanded="true">
         <img class="h-30 w-30" src="../../../assets/Rectangle 2.svg">
-        <span class="px-4 text-md mt-3 font-medium text-black mr-4">Vamsi Krishna</span>
+        <span class="px-4 text-md mt-3 font-medium text-black-200 mr-4">Vamsi Krishna</span>
         <img class="mt-5" src="../../../assets/chevron-right-solid.svg">
       </button>
     </div>
     <div *ngIf="profiledropornot" class="">
-      <img style="bottom: 7rem;" class=" absolute right-0  -mt-4 mr-2" src="../../../assets/Polygon 1.svg">
-      <div style="width: 150px;bottom: 7.5rem;"  class="absolute right-0  -mt-2 rounded-md shadow-lg bg-blue-600 bg-opacity-100 ring-1 ring-black ring-opacity-5 ">
-        <div *ngFor="let values of dropDownarratProfile" class="py-1" role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
+      <img style="bottom: 7rem;" class="focus:outline-none absolute right-0  -mt-4 mr-2" src="../../../assets/Polygon 1.svg">
+      <div style="width: 150px;bottom: 7.5rem;"  class="absolute right-0 bg-blue -mt-2 rounded-md shadow-lg bg-blue bg-opacity-100 ">
+        <div *ngFor="let values of dropDownarratProfile" class="py-1 " role="menu" aria-orientation="vertical" aria-labelledby="options-menu">
           <div class="flex flex-row">
             <img *ngIf="values=='My Profile'" class=" mr-5 h-30 w-30 ml-6" src="../../../assets/user-solid.svg">
             <img *ngIf="values=='Settings'" class=" mr-5 h-30 w-30 ml-6" src="../../../assets/cog-solid.svg">
