--- a/src/app/ngt-components/dropdown/dropdown.component.html
+++ b/src/app/ngt-components/dropdown/dropdown.component.html
@@ -1,6 +1,6 @@
 <div class="relative pl-64 py-16 inline-block text-left ">
-  <div (click)="dropdownclick()">
-    <button type="button"
+  <div (click)="toggleShowDiv('Python Programming')">
+    <button type="button" 
       class="inline-flex justify-center w-full bg-blue bg-opacity-100 rounded-lg shadow-sm px-4 py-2  text-sm font-medium text-white  focus:outline-none "
       id="options-menu" aria-haspopup="true" aria-expanded="true">
       Python Programming
@@ -12,7 +12,7 @@
       </svg>
     </button>
   </div>
-  <div *ngIf="dropornot">
+  <div [@slideInOut]="animationState" >
     <div class=" origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white  focus:outline-none">
       <div *ngFor="let values of dropDownarr" class="py-1" role="menu" aria-orientation="vertical"
         aria-labelledby="options-menu">
@@ -23,7 +23,7 @@
   </div>
 </div>
 <div class="relative pl-64 py-16 inline-block text-left ">
-  <div (click)="New()">
+  <div (click)="toggleShowDiv('New')">
     <button type="button"
       class="inline-flex justify-center w-full bg-gray-100 bg-opacity-100 rounded-lg shadow-sm px-4 py-2  bg-white text-sm font-medium text-gray-700 focus:outline-none "
       id="options-menu" aria-haspopup="true" aria-expanded="true">
@@ -36,7 +36,7 @@
       </svg>
     </button>
   </div>
-  <div *ngIf="newdropornot"
+  <div [@slideInOut]="animationfornewdropdown"
     class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ">
     <div *ngFor="let values of dropDownarr" class="py-1" role="menu" aria-orientation="vertical"
       aria-labelledby="options-menu">
@@ -46,10 +46,8 @@
   </div>
 </div>
 
-
-
 <div class="relative pl-64 py-16 inline-block text-left ">
-  <div (click)="Mahismathi()">
+  <div (click)="toggleShowDiv('Mahishmati')">
     <button type="button"
       class="inline-flex justify-center w-full bg-green bg-opacity-100 rounded-lg shadow-sm px-4 py-2 text-sm font-medium text-white focus:outline-none "
       id="options-menu" aria-haspopup="true" aria-expanded="true">
@@ -63,7 +61,7 @@
     </button>
   </div>
   <!-- ring-1 ring-black ring-opacity-5  -->
-  <div *ngIf="mahismathidropornot"
+  <div [@slideInOut]="animationformahishmathidropdown"
     class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ">
     <div *ngFor="let values of dropDownarr" class="py-1" role="menu" aria-orientation="vertical"
       aria-labelledby="options-menu">
@@ -73,10 +71,8 @@
   </div>
 </div>
 
-
-
 <div class="relative pl-64 py-16 inline-block text-left ">
-  <div (click)="Languages()">
+  <div (click)="toggleShowDiv('Language')">
     <button type="button"
       class="inline-flex justify-center w-64 bg-gray-100 bg-opacity-100 rounded-full shadow-sm px-4 py-2 bg-white text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none "
       id="options-menu" aria-haspopup="true" aria-expanded="true">
@@ -89,7 +85,7 @@
       </svg>
     </button>
   </div>
-  <div *ngIf="languagesdropornot"
+  <div [@slideInOut]="animationforlanguagedropdown"
     class="focus:outline-none origin-top-right absolute right-0 mt-2 w-56 rounded-md shadow-lg bg-white ">
     <div *ngFor="let values of dropDownarr" class="py-1" role="menu" aria-orientation="vertical"
       aria-labelledby="options-menu">
@@ -114,13 +110,13 @@
         <span class="px-4">Python Programming</span>
         <span class="text-xs font-medium text-gray inline-flex px-4">1000+ Posts</span>
       </div>
-      <img (click)="Posts()" class="ml-auto mt-3 h-5 w-5 mr-4" src="../../../assets/menu.svg">
+      <img (click)="toggleShowDiv('Post')" class="ml-auto mt-3 h-5 w-5 mr-4 " src="../../../assets/menu.svg">
       <!-- <svg class="-mr-1 ml-10 h-5 w-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
           <path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" />
         </svg> -->
     </button>
   </div>
-  <div *ngIf="postsdropornot"
+  <div [@slideInOut]="animationforpostdropdown"
     class="focus:outline-none origin-top-right absolute right-0  w-32 -mt-5 mr-4 rounded-md shadow-lg bg-white">
     <img class="origin-top-right absolute right-0  -mt-2 mr-2" src="../../../assets/Component 983 – 1.svg">
     <div *ngFor="let values of dropDownarratPost" class="py-1" role="menu" aria-orientation="vertical"
@@ -138,7 +134,7 @@
 <br>
 <br>
 <div class="relative pl-64 py-16 inline-block text-left ">
-  <div (click)="Profile()">
+  <div (click)="toggleShowDiv('Profile')">
     <button type="button" class="flex flex-row px-4 py-2 bg-white text-sm font-medium text-white focus:outline-none "
       id="options-menu" aria-haspopup="true" aria-expanded="true">
       <img class="h-30 w-30" src="../../../assets/Rectangle 2.svg">
@@ -146,7 +142,7 @@
       <img class="mt-5" src="../../../assets/chevron-right-solid.svg">
     </button>
   </div>
-  <div *ngIf="profiledropornot" class="">
+  <div [@slideInOut]="animationforprofiledropdown" class="">
     <img style="bottom: 7rem;" class="focus:outline-none absolute right-0  -mt-4 mr-2"
       src="../../../assets/Polygon 1.svg">
     <div style="width: 150px;bottom: 7.5rem;"
