--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,8 @@
   <ngt-button (click)="buttonClicked()">
     click on me
   </ngt-button>
-  <ngt-checkbox (click)="checkboxCLicked()">
-    check on me
+  <ngt-checkbox name="fieldName" (click)="checkboxCLicked()">
+    <!-- check on me -->
+    checkbox  <!-- Pradeep -->
   </ngt-checkbox>
   <ngt-input></ngt-input>
