Button Parameters Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-  <ngt-button (click)="buttonClicked()">
+  <ngt-button [color]="'blue'" (click)="buttonClicked()">
     click on me
   </ngt-button>
   <ngt-checkbox name="fieldName" (click)="checkboxCLicked()">
