--- a/src/app/ngt-components/tabs/tabs.component.scss
+++ b/src/app/ngt-components/tabs/tabs.component.scss
@@ -6,8 +6,8 @@
    display: inline-block;
    margin: 0 0.5rem;
  
-  animation: pulse; /* referring directly to the animation's @keyframe declaration */
-   animation-duration: 2s; /* don't forget to set a duration! */
+  //animation: pulse; /* referring directly to the animation's @keyframe declaration */
+   //animation-duration: 2s; /* don't forget to set a duration! */
    border-bottom-width:3.5px;
    border-bottom-left-radius:2px;
    border-bottom-right-radius:2px;
