--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,11 +10,16 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
-  <ngt-button (click)="buttonClicked()">
+  <!-- {'color':'white','background':'blue','height':20px,'width':20px} -->
+  <ngt-button (click)="buttonClicked()" [color]="'blue'">
     click on me
   </ngt-button>
-  <ngt-checkbox name="fieldName" (click)="checkboxCLicked()">
-    <!-- check on me -->
-    checkbox  <!-- Pradeep -->
+
+
+
+
+  <!-- <ngt-checkbox name="fieldName" (click)="checkboxCLicked()">
+   
+    checkbox  
   </ngt-checkbox>
-  <ngt-input></ngt-input>
+  <ngt-input></ngt-input> -->
