--- a/src/app/ngt-components/button/button.component.html
+++ b/src/app/ngt-components/button/button.component.html
@@ -1,4 +1,4 @@
-<button   class="btn block uppercase mx-auto shadow bg-indigo-800 
+<button [style.background-color]="color"  class="btn block uppercase mx-auto shadow bg-indigo-800 
 hover:bg-indigo-700 focus:shadow-outline focus:outline-none 
  text-xs py-3 px-10 rounded   btn ripple" >
     <ng-content></ng-content>
