--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,18 +2,18 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 <div class="w-3/6 m-auto">
-<tabs bgColor="#fff" color="black" fontsize="1.25rem" fontweight="bold">
-  <tab tabTitle="Challenges">
+<ngt-tabs bgColor="#fff" color="black" fontsize="1.25rem" fontweight="bold">
+  <ngt-tab tabTitle="Challenges">
     Content of Challenges
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus exercitationem vero, id autem fugit assumenda a molestiae numquam at, quisquam cumque. Labore eligendi perspiciatis quia incidunt quaerat ut ducimus?
-  </tab>
-  <tab tabTitle="Cocos">
+  </ngt-tab>
+  <ngt-tab tabTitle="Cocos">
     Content of Cocos
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus exercitationem vero, id autem fugit assumenda a molestiae numquam at, quisquam cumque. Labore eligendi perspiciatis quia incidunt quaerat ut ducimus?
-  </tab>
-  <tab tabTitle="Friends">
+  </ngt-tab>
+  <ngt-tab tabTitle="Friends">
     Content of Friends
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi minus exercitationem vero, id autem fugit assumenda a molestiae numquam at, quisquam cumque. Labore eligendi perspiciatis quia incidunt quaerat ut ducimus?
-  </tab>
-</tabs>
+  </ngt-tab>
+</ngt-tabs>
 </div>
