button comp finished

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -91,8 +91,8 @@
 <!-- <ngt-button [color]= "'blue'" >
     Your feed
   </ngt-button> -->
-<ngt-checkbox name="fieldName" (click)="checkboxCLicked()">
+<!-- <ngt-checkbox name="fieldName" (click)="checkboxCLicked()">
   check on me
-  <!-- Pradeep -->
-</ngt-checkbox>
-<ngt-input></ngt-input>
+  Pradeep
+</ngt-checkbox> -->
+<!-- <ngt-input></ngt-input> -->
